<resources>
    <string name="app_name">YieldSage</string>

    <string name="login_title">Welcome To YieldSage</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirmPw">confirm password</string>
    <string name="name">name</string>
    <string name="phone_number">phone number</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login With Google</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="register_title">Register</string>
    <string name="register_text">Don\'t have any account? Register</string>
    <string name="alreadyHave">Already have account? Log In</string>
    <string name="profile_wlcm">Welcome,</string>
    <string name="menu_icon">menu icon</string>

    <string name="predict">Predict</string>
    <string name="result">Result</string>
    <string name="directory">Directory</string>
    <string name="ndvi">NDVI</string>

    <string name="add_project">Add Project</string>
    <string name="create_project">Create Project</string>
    <string name="title_project">title project</string>
    <string name="project_desc">project description</string>
    <string name="create">create</string>

    <string name="ndvi_history">NDVI History</string>
    <string name="add_ndvi">add NDVI</string>
</resources>